# simplisearch

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cli.py  dev.sh  docker-compose.yml
model_server/: server.py
simpli_search/: simpli_search.cpp
